--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "nl.paulkros.safespace"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -32,9 +32,10 @@ android {
     }
 }
 
-dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+dependencies {
+    implementation 'org.mongodb:mongodb-driver-sync:4.5.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
