--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ android {
 
 
 dependencies {
-    implementation 'org.mongodb:mongodb-driver-sync:4.5.1'
+    implementation 'com.squareup.okhttp3:okhttp-tls:4.9.3'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
